2011-07-04  Stefano Lattarini  <stefano.lattarini@gmail.com>

	remake: fix outdated comment in configure.am
	* lib/am/configure.am: Fix comment falsified by changes in
	commit `v1.11-366-gbee9871'.
	Suggestion by Ralf Wildenhues.

2011-05-29  Stefano Lattarini  <stefano.lattarini@gmail.com>

	remake: behave better with non-GNU make in subdirectories
	Currently, with every decent make program, it is possible to
	rebuild out-of-date autotools-generated files with a simple
	"make Makefile" -- but for this to work reliably with non-GNU
	make implementations, the command must be issued from the
	top-level directory.  This patch removes such limitation.
	* lib/am/configure.am (am--refresh): Depend on `%MAKEFILE%'.
	* tests/defs.in (using_gmake): New function, backported from the
	`master' branch (and simplified).
	* tests/remake-subdir.test: New test.
	* tests/remake-subdir2.test: Likewise.
	* tests/remake-subdir-gnu.test: Likewise.
	* tests/remake-subdir-from-subdir.test: Likewise.
	* tests/Makefile.am (TESTS): Update.

2011-05-20  Stefano Lattarini  <stefano.lattarini@gmail.com>

	testsuite: avoid re-running few tests with 'parallel-tests' option
	Some tests in our testsuite use the 'simple-tests' driver only
	marginally, or simply as a mean to conveniently check unrelated
	invariants.  It makes little sense to force these tests to also
	run with the 'parallel-tests' Automake option active, as doing so
	offers no real gain in coverage, while often causing a measurable
	overhead in execution time (for an already too-slow testsuite).
	* tests/pr401.test (parallel_tests): Define to "no", to prevent
	the generation of a sibling test script using the 'parallel-tests'
	driver.
	* tests/pr401b.test: Likewise.
	* tests/pr401c.test: Likewise.

2011-05-20  Stefano Lattarini  <stefano.lattarini@gmail.com>

	testsuite: allow tests to avoid the use of 'parallel-tests' option
	* tests/gen-parallel-tests: Do not generate "siblings" for tests