@@ -1,5 +1,12 @@
 2011-07-04  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	remake: add test ensuring that slower remakes don't hang
+	* tests/remake-subdir-long-time.test: New test.
+	* tests/Makefile.am (TESTS): Update.
+	Suggestion by Ralf Wildenhues.
+
+2011-07-04  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	remake: fix outdated comment in configure.am
 	* lib/am/configure.am: Fix comment falsified by changes in
 	commit `v1.11-366-gbee9871'.
